# metty

./: Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: ci.yml
src/: commands.rs  formatting.rs  main.rs
