[package]
name = "metty"
version = "2024.3.1"

description = "A CLI tool for getting real time information about the Tyne and Wear Metro"
readme = "README.md"

homepage = "https://github.com/DanNixon/metty"
repository = "https://github.com/DanNixon/metty"

license = "MIT"

edition = "2021"

[dependencies]
ascii_table = { version = "4.0.3", features = ["color_codes"] }
cadmium-yellow = "2024.3.2"
clap = { version = "~4.4.0", features = ["derive", "env"] }
clap_complete = "~4.5.1"
colored = "2.1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
