[package]
name = "metty"
version = "2024.7.0"

description = "A CLI tool for getting real time information about the Tyne and Wear Metro"
readme = "README.md"

homepage = "https://github.com/DanNixon/metty"
repository = "https://github.com/DanNixon/metty"

license = "MIT"

categories = ["command-line-utilities"]
keywords = ["real-time-information", "nexus", "tyne-and-wear-metro", "cli", "command-line"]

edition = "2021"

[dependencies]
ascii_table = { version = "4.0.3", features = ["color_codes"] }
cadmium-yellow = "2024.3.2"
clap = { version = "~4.4.0", features = ["derive", "env"] }
clap_complete = "~4.4.0"
colored = "2.1.0"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
