[package]
name = "metty"
version = "2024.7.0"

description = "A CLI tool for getting real time information about the Tyne and Wear Metro"
readme = "README.md"

homepage = "https://github.com/DanNixon/metty"
repository = "https://github.com/DanNixon/metty"

license = "MIT"

categories = ["command-line-utilities"]
keywords = ["nexus", "tyne-and-wear-metro", "cli", "command-line"]

edition = "2024"

[dependencies]
ascii_table = { version = "5.0.0", features = ["color_codes"] }
cadmium-yellow = "2024.3.2"
clap = { version = "4.5.39", features = ["derive", "env"] }
clap_complete = "4.5.52"
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
